composite/configurations/eks/eck/elastic/templates/operator-namespace.yaml
---
# Source: eck-operator/templates/operator-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-system
  labels:
    name: elastic-system
